<resources>
    <string name="app_name">Shopphile</string>
    <string name="back_button">Back Button</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="_0">0</string>
    <string name="leftParenthesis">(</string>
    <string name="rightParenthesis">)</string>
    <string name="shipping">$0</string>
    <string name="shipping_rates">Shipping Rates</string>
    <string name="amount">$0</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="checkout">Checkout</string>
    <string name="card_image">Card Image</string>
    <string name="delete">Delete</string>
    <string name="minus">Minus</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="deliver_to">Deliver to</string>
    <string name="home">Home</string>
    <string name="new_arrival">New Arrival</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="chorus">Chorus</string>
    <string name="compressor">Compressor</string>
    <string name="new_narrival">New\nArrival</string>
    <string name="with_free_shipping">With Free Shipping</string>
    <string name="shop_now">Shop Now</string>
    <string name="popular_products">Popular products</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="user_example_com">user@example.com</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="rate_this_product">Rate this Product</string>
    <string name="write_your_review">Write your review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="this_cannot_be_changed">(this cannot be changed)</string>
    <string name="stars">★★★★★</string>
    <string name="great_product">Great product!</string>
    <string name="by_user_example_com">user@example.com</string>
    <string name="_99_99">$99.99</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="drums">Drums</string>
    <string name="keyboard">Keyboard</string>
    <string name="bass">Bass</string>
    <string name="guitar">Guitar</string>
</resources>