<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_this_product"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/this_cannot_be_changed"
            android:textStyle="italic"
            android:textSize="12sp" />

    </LinearLayout>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        style="?android:attr/ratingBarStyleIndicator"
        android:isIndicator="false"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_your_review"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_review"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/write_your_review_here"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textColorHint="#8D6E63"
        tools:ignore="Autofill" />

</LinearLayout>
