<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button"
        android:padding="4dp"
        android:rotationY="180"
        android:src="@drawable/arrow_circle_right_24px"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/account_circle_24px" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/user_example_com"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:fontFamily="sans-serif-medium" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selected_button"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium" />

</RelativeLayout>
